# cachep4-dpdk-app

./: .gitignore  LICENSE  README.md  cachep4-load-latency.lua  cachep4-throughput.lua
case/: clean.sh  run.sh  setup.sh
case/src/hardware_dep/dpdk/: main_loop.c
case/src/hardware_dep/dpdk/data_plane/: dpdk_primitives.c  dpdk_tables.c
case/src/hardware_dep/dpdk/includes/: aliases.h  dpdk_primitives.h
case/src/hardware_dep/freescale/data_plane/: backend.c
case/src/hardware_dep/freescale/includes/: aliases.h
case/src/hardware_dep/shared/ctrl_plane/: Makefile  ctrl_plane_backend.c  ctrl_plane_backend.h  dpdk_case0_cache_controller.c  dpdk_case0_controller.c  dpdk_case1_cache_controller.c  dpdk_case1_cache_exact_controller.c  dpdk_case1_controller.c  dpdk_case2_cache_controller.c  dpdk_case2_cache_exact_controller.c  dpdk_case2_controller  dpdk_case2_controller.c  dpdk_case3_cache_controller.c  dpdk_case3_cache_exact_controller.c  dpdk_case3_controller  dpdk_case3_controller.c  dpdk_controller.c  dpdk_l3_controller.c  fifo.c  fifo.h  handlers.c  handlers.h  messages.c  messages.h  sock_helpers.h  threadpool.h
case/src/hardware_dep/shared/data_plane/: ternary_naive.c  vector.c
case/src/hardware_dep/shared/includes/: backend.h  ternary_naive.h
case0/: CMakeLists.txt  packets.txt  run.sh  setup.sh
case0/src/hardware_dep/dpdk/: main.c  main_loop.c
case0/src/hardware_dep/dpdk/data_plane/: dpdk_lib.c  dpdk_tables.c
case0/src/hardware_dep/dpdk/includes/: dpdk_lib.h  dpdk_primitives.h  dpdk_tables.h
case0/src/hardware_dep/freescale/: main.c
case0/src/hardware_dep/freescale/data_plane/: freescale_tables.c
case0/src/hardware_dep/freescale/includes/: backend.h  freescale_primitives.h  freescale_tables.h
case0/src/hardware_dep/shared/ctrl_plane/: Makefile  controller.c  controller.h  ctrl_plane_backend.c  dpdk_case0_cache_controller  dpdk_case0_cache_controller.c  dpdk_case0_controller  dpdk_case0_controller.c  dpdk_controller.c  dpdk_l3_controller.c  handlers.h  messages.c  messages.h  sock_helpers.c  threadpool.c
case0/src/hardware_dep/shared/includes/: dataplane.h  vector.h
